// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title Page Check have h2 tag 1`] = `
<div>
  <h2
    class="mcm-title-unit jest-h2"
  >
    h2 태그입니다.
  </h2>
</div>
`;

exports[`Title Page Check have h2 tag 2`] = `
<div>
  <h1
    class="mcm-title-unit jest-img"
  >
    img 태그를 전달했지만 h1 태그가 렌더됩니다.
  </h1>
</div>
`;

exports[`Title Page Snapshot 1`] = `
<div>
  <h1
    class="mcm-title-unit"
  >
    title을 렌더합니다.
  </h1>
</div>
`;
